@@ -1,3 +1,10 @@
+2015-06-24 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCmain.c,
+	  doc/sdccman.lyx,
+	  support/regression/tests/version.c:
+	  Implement version macros RFE #441.
+
 2015-06-24 Ben Shi <powerstudio1st AT 163 DOT com>
 
         * support/regression/collate-results.py:
